First set of css

--- a/homepage.html
+++ b/homepage.html
@@ -1,2 +1,51 @@
 <html>
 <head>
+  <meta charset = "utf-8">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+
+<body>
+  <main>
+
+    <header>
+      <h1>Tobi Denedo</h1>
+
+
+    <nav>
+      <ul class='nav-list'>
+        <li href=""><a>About Me</a></li>
+        <li href=""><a>Projects</a></li>
+        <li href=""><a>Skills</a></li>
+        <li href=""><a>Contact</a></li>
+      </ul>
+    </nav>
+
+    </header>
+
+    <about>
+      <h2>About Me</h2>
+      <p>This paragraph is going to be about me</p>
+    </about>
+
+    <projects>
+      <h2>Projects</h2>
+      <p>All of my projects will live here</p>
+    </projects>
+
+    <skills>
+      <h2>Skills</h2>
+      <p>Logo for all of my skills</p>
+    </skills>
+
+    <contact>
+      <h2>Contact</h2>
+      <p>Email: toboredenedo@gmail.com</p>
+      <p>Telephone Number: 07552341063</p>
+    </contact>
+
+
+
+  </main>
+</body>
+</html>
