--- a/homepage.html
+++ b/homepage.html
@@ -3,10 +3,11 @@
   <meta charset = "utf-8">
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css"/>
+  <script src="https://kit.fontawesome.com/92c053909e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <main>
+
 
     <header>
       <h1>Tobi Denedo</h1>
@@ -22,30 +23,37 @@
     </nav>
 
     </header>
+    <main-body>
+      <content class='content' >
+      <about>
+        <h2>About Me</h2>
+        <p>This paragraph is going to be about me</p>
+      </about>
 
-    <about>
-      <h2>About Me</h2>
-      <p>This paragraph is going to be about me</p>
-    </about>
+      <projects>
+        <h2>Projects</h2>
+        <p>All of my projects will live here</p>
+      </projects>
 
-    <projects>
-      <h2>Projects</h2>
-      <p>All of my projects will live here</p>
-    </projects>
+      <skills>
+        <h2>Skills</h2>
+  
+        <img  = src = 'html5.svg' alt='html'/>
+        <img  = src = 'css3-alt.svg' alt='css'/>
+        <img  = src = 'square-js.svg' alt='javascript'/>
+        <img  = src = 'square-github.svg' alt='github'/>
+      </skills>
 
-    <skills>
-      <h2>Skills</h2>
-      <p>Logo for all of my skills</p>
-    </skills>
+      <contact>
+        <h2>Contact</h2>
+        <p>Email: toboredenedo@gmail.com</p>
+        <p>Telephone Number: 07552341063</p>
+      </contact>
 
-    <contact>
-      <h2>Contact</h2>
-      <p>Email: toboredenedo@gmail.com</p>
-      <p>Telephone Number: 07552341063</p>
-    </contact>
+    </content>
 
 
 
-  </main>
+  </main-body>
 </body>
 </html>
