New age adding picture changing about

--- a/homepage.html
+++ b/homepage.html
@@ -15,42 +15,52 @@
 
     <nav>
       <ul class='nav-list'>
-        <li href=""><a>About Me</a></li>
-        <li href=""><a>Projects</a></li>
-        <li href=""><a>Skills</a></li>
-        <li href=""><a>Contact</a></li>
+        <li ><a href="#about">About Me</a></li>
+        <li ><a href="#projects">Projects</a></li>
+        <li ><a href="#skills">Skills</a></li>
+        <li ><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
     </header>
-    <main-body>
-      <content class='content' >
-      <about>
-        <h2>About Me</h2>
-        <p>This paragraph is going to be about me</p>
-      </about>
+    <main-body
+    >
+      <div class='content' >
+      <section>
+      <about  id='about'>
+        <div class='about-title'>
+        <h1>Front End Developer</h1>
+          <img src='tobi.jpg' alt='Tobi Denedo'/>
+        </div>
 
-      <projects>
+      </about>
+    </section>
+
+    <section>
+
+      <projects id='projects'>
         <h2>Projects</h2>
         <p>All of my projects will live here</p>
       </projects>
 
-      <skills>
+    </section>
+
+      <skills id='skills'>
         <h2>Skills</h2>
-  
-        <img  = src = 'html5.svg' alt='html'/>
-        <img  = src = 'css3-alt.svg' alt='css'/>
-        <img  = src = 'square-js.svg' alt='javascript'/>
-        <img  = src = 'square-github.svg' alt='github'/>
+
+        <img   href='' title='HTML' src = 'html5.svg' alt='html'/>
+        <img   href='' title='CSS' src = 'css3-alt.svg' alt='css'/>
+        <img   href='' title='JAVASCRIPT' src = 'square-js.svg' alt='javascript'/>
+        <img   href='' title='GITHUB' src = 'square-github.svg' alt='github'/>
       </skills>
 
-      <contact>
+      <contact id='contact'>
         <h2>Contact</h2>
         <p>Email: toboredenedo@gmail.com</p>
         <p>Telephone Number: 07552341063</p>
       </contact>
 
-    </content>
+    </div>
 
 
 
