--- a/homepage.html
+++ b/homepage.html
@@ -29,8 +29,12 @@
       <section>
       <about  id='about'>
         <div class='about-title'>
-        <h1>Front End Developer</h1>
+          <div class= 'about-text'>
+            <h1>front end developer</h1>
+            <p>I mostly focus on the front-end of web development. This is my website</p>
+          </div>
           <img src='tobi.jpg' alt='Tobi Denedo'/>
+
         </div>
 
       </about>
@@ -39,14 +43,19 @@
     <section>
 
       <projects id='projects'>
-        <h2>Projects</h2>
+        <h2>projects</h2>
         <p>All of my projects will live here</p>
+
+        <div class = 'project-grid'>
+          <div class='project-picture'></div>
+          <div class='project-description'></div>
+        </div>
       </projects>
 
     </section>
 
       <skills id='skills'>
-        <h2>Skills</h2>
+        <h2>skills</h2>
 
         <img   href='' title='HTML' src = 'html5.svg' alt='html'/>
         <img   href='' title='CSS' src = 'css3-alt.svg' alt='css'/>
@@ -55,7 +64,7 @@
       </skills>
 
       <contact id='contact'>
-        <h2>Contact</h2>
+        <h2>contact</h2>
         <p>Email: toboredenedo@gmail.com</p>
         <p>Telephone Number: 07552341063</p>
       </contact>
